force-app/main/default/objects/SVMXC__SPM_Average_Response_Time__c/SVMXC__SPM_Average_Response_Time__c.object-meta.xml
<CustomObject>
    <description>Average Response Time is metric to communicate visits that were done within the specified SLA.</description>
    <label>SPM - Average Response Time</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPM - Average Response Times</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>