force-app/main/default/objects/SVMXC__SPM_Average_Response_Time__c/fields/SVMXC__Account__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look to Account</description>
    <inlineHelpText>Look to Account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SPM - Average Response Times</relationshipLabel>
    <relationshipName>SPM_Average_Response_Times</relationshipName>
    <type>Lookup</type>
</CustomField>