force-app/main/default/objects/SVMXC__SPM_Average_Response_Time__c/fields/SVMXC__Actual_Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Actual_Resolution_Time__c</fullName>
    <description>Duration of minutes in which Resolution captured</description>
    <inlineHelpText>Duration of minutes in which Resolution captured</inlineHelpText>
    <label>Actual Resolution Time (In Mins)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>