force-app/main/default/objects/SVMXC__SPM_Average_Response_Time__c/fields/SVMXC__Extension_Time__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Extension_Time__c</fullName>
    <description>Number of minutes by which clock was extended by the technician</description>
    <inlineHelpText>Number of minutes by which clock was extended by the technician</inlineHelpText>
    <label>Extension Time (In Mins)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>