force-app/main/default/objects/SVMXC__SPM_Average_Response_Time__c/fields/SVMXC__SLA_Restoration_Time__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SLA_Restoration_Time__c</fullName>
    <description>Number of minutes Configured in the SLA Rule for Restoration.</description>
    <inlineHelpText>Number of minutes Configured in the SLA Rule for Restoration.</inlineHelpText>
    <label>SLA Restoration Time (In Mins)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>