force-app/main/default/objects/SVMXC__SPM_Average_Response_Time__c/fields/SVMXC__SLA_Terms__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SLA_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look to Service Level Agreement.</description>
    <inlineHelpText>Look to Service Level Agreement.</inlineHelpText>
    <label>SLA Terms</label>
    <referenceTo>SVMXC__Service_Level__c</referenceTo>
    <relationshipLabel>SPM - Average Response Times</relationshipLabel>
    <relationshipName>SPM_Average_Response_Times</relationshipName>
    <type>Lookup</type>
</CustomField>